<resources>
    <string name="app_name">SawmillSimulator</string>
    <string name="log_button">Switch Add/Remove</string>
    <string name="addLog_button">Buy Log 10$</string>
    <string name="addDebarkedLog_button">Craft DebarkedLog</string>
    <string name="addCantedLog_button">Craft CantedLog</string>
    <string name="addPlank_button">Craft Plank</string>
    <string name="removeLog_button">Remove Log</string>
    <string name="removeDebarkedLog_button">Remove DebarkedLog</string>
    <string name="removeCantedLog_button">Remove CantedLog</string>
    <string name="removePlank_button">Remove Plank</string>
    <string name="to_orders_button">To Orders</string>
    <string name="to_work_button">To Work</string>
    <string name="to_inventory_button">To Inventory</string>
    <string name="back_button">Back</string>
    <string name="acceptOrder_button">Accept \nOrder</string>
    <string name="clicked">+0.10$</string>
</resources>